# AdventOfCode

./: .gitignore  .gitmodules  CMakeLists.txt  common.h  generate-test-file-template.py  get_puzzle_input.py  main.cpp  tester.cpp  tester.h
Visualizations/: day2023-05.py
puzzles/: CMakeLists.txt  puzzles.cpp  puzzles.h
puzzles/2020/: CMakeLists.txt
puzzles/2020/include/: 2020.h
puzzles/2020/src/: 2020.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
puzzles/2021/: CMakeLists.txt  answers.txt
puzzles/2021/include/: 2021.h
puzzles/2021/src/: 2021.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day22_deprecated.cpp  day23.cpp  day24.cpp  day25.cpp
puzzles/2022/: CMakeLists.txt  answers.txt
puzzles/2022/include/: 2022.h
puzzles/2022/src/: 2022.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16-old.cpp  day16.cpp  day17.cpp  day18.cpp  day19-old.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
puzzles/2023/: CMakeLists.txt
puzzles/2023/data/day20/source/: 00000.txt  03739.txt  03793.txt  03923.txt  04027.txt
puzzles/2023/include/: 2023.h
puzzles/2023/src/: 2023.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05-visualizer.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18-old.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  pipes.h
puzzles/day01/: day01.cpp
puzzles/day02/: day02.cpp
puzzles/day03/: day03.cpp
puzzles/day04/: day04.cpp
puzzles/day05/: day05.cpp
puzzles/day06/: day06.cpp
puzzles/day07/: day07.cpp
puzzles/day08/: day08.cpp
puzzles/day09/: day09.cpp
puzzles/day10/: day10.cpp
puzzles/day11/: day11.cpp
puzzles/day12/: day12.cpp
puzzles/day13/: day13.cpp
puzzles/day14/: day14.cpp
puzzles/day15/: day15.cpp
puzzles/day16/: day16.cpp
puzzles/day17/: day17.cpp
puzzles/day18/: day18.cpp
puzzles/day19/: day19.cpp
puzzles/day20/: day20.cpp
puzzles/day21/: day21.cpp
puzzles/day22/: day22.cpp  day22_deprecated.cpp
puzzles/day23/: day23.cpp
puzzles/day24/: day24.cpp
puzzles/day25/: day25.cpp
